--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
 <style>
 
 #i1{
-
+width: 300px;
+height: 250; 
+padding: 50px;
 }
 #i2{
-    
+width: auto;
+height: 150;  
 }
 #i3{
   border: 10px solid #ddd;
   border-radius: 4px;
   padding: 10px;
-  width: 150px;
 }
 #i4{
-    
+    width: 100px;
+  height: auto; 
 }
 #i5{
   width: 400px;
@@ -26,6 +29,7 @@
 }
 #i6{
     border-radius: 50%;
+    width: 15%;
 }
 
 </style>
